commit on master

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </head>
     <body>
         <!-- /**
-                         * !Header_Section
-                         */ -->
+                                 * !Header_Section
+                                 */ -->
         <header class="header flex-jc-sb">
             <div class="header__fylo">
                 <img class="header__logo" src="/images/logo.svg" alt="logo">
@@ -46,12 +46,12 @@
 
 
         <!-- /**
-                        * !Main_Section
-                        */ -->
+                                * !Main_Section
+                                */ -->
 
         <!-- /**
-                        * *Value_Proposition
-                        */ -->
+                                * *Value_Proposition
+                                */ -->
         <main class="content">
             <div class="content__contents">
                 <div class="hero">
@@ -67,7 +67,7 @@
                 <div class="intro__snippet">
                     <h2>
                         Fylo stores all your most important files in one secure location. Access them wherever 
-                                                                        you need, share and collaborate with friends family, and co-workers.
+                                                                                                you need, share and collaborate with friends family, and co-workers.
                     </h2>
                 </div>
                 <div class="btn_1">
@@ -76,60 +76,60 @@
             </div>
 
             <!-- /**
-                                    * !Services
-                                    */ -->
+                                                * !Services
+                                                */ -->
             <!-- /**
-                                                                                                                                                
-                                    * */Access/Security/Collaboration/any_file
-                                    */ -->
+                                                                                                                                                            
+                                                * */Access/Security/Collaboration/any_file
+                                                */ -->
 
 
             <!-- /**
-                                        * *Access
-                                        */ -->
+                                                    * *Access
+                                                    */ -->
 
                 <div class="main_card"> <div class="card_access">
                     <div class="card_access__icon">
                         <img class="card_access__img" src="/images/icon-access-anywhere.svg" alt="icon_access">
                     </div>
                     <!-- /**
-                                                              * *Services/Access/Header
-                                                              */ -->
+                                                                                  * *Services/Access/Header
+                                                                                  */ -->
                     <div class="card_access__header">
                         <h3>
                             Access your files, anywhere
                         </h3>
                     </div>
                     <!-- /**
-                                                              * *Services/Access/Snippet
-                                                              */ -->
+                                                                                  * *Services/Access/Snippet
+                                                                                  */ -->
                     <div class="card_access__snippet">
                         <p>
                             The ability to use a smartphone, tablet, or computer to access your account means your 
-                                                                                    files follow you everywhere.
+                                                                                                                files follow you everywhere.
                         </p>
                     </div>
                 </div>
 
 
                 <!-- /**
-                                                      * *Security
-                                                      */ -->
+                                                                      * *Security
+                                                                      */ -->
                 <div class="card_security">
                     <div class="card_security__icon">
                         <img class="card_security__img" src="/images/icon-security.svg" alt="icon_security">
                     </div>
                     <!-- /**
-                                                              * *Security/Header
-                                                              */ -->
+                                                                                  * *Security/Header
+                                                                                  */ -->
                     <div class="card_security__header">
                         <h3>
                             Security you can trust
                         </h3>
                     </div>
                     <!-- /**
-                                                              * *Security/Snippet
-                                                              */ -->
+                                                                                  * *Security/Snippet
+                                                                                  */ -->
                     <div class="card_security__snippet">
                         <p>
                             2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
@@ -139,24 +139,24 @@
 
 
                 <!-- /**
-                                                  * *Collaboration
-                                                  */ -->
+                                                                  * *Collaboration
+                                                                  */ -->
                 <div class="card_collaboration">
                     <div class="card_collaboration__icon">
                         <img class="card_collaboration__img" src="/images/icon-collaboration.svg" alt="icon_collaboration">
                     </div>
 
                     <!-- /**
-                                                          * *Collaboration/Header
-                                                          */ -->
+                                                                              * *Collaboration/Header
+                                                                              */ -->
                     <div class="card_collaboration__header">
                         <h3>
                             Real-time collaboration
                         </h3>
                     </div>
                     <!-- /**
-                                                          * *Collaboration/Snippet
-                                                          */ -->
+                                                                              * *Collaboration/Snippet
+                                                                              */ -->
                     <div class="card_security__snippet">
                         <p>
                             Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
@@ -166,23 +166,23 @@
 
 
                 <!-- /**
-                                                  * *Any_File
-                                                  */ -->
+                                                                  * *Any_File
+                                                                  */ -->
                 <div class="card_Any_File">
                     <div class="card_Any_File__icon">
                         <img class="card_Any_File__img" src="/images/icon-any-file.svg" alt="icon_Any_File">
                     </div>
                     <!-- /**
-                                                          * *Any_File/Header
-                                                          */ -->
+                                                                              * *Any_File/Header
+                                                                              */ -->
                     <div class="card_Any_File__header">
                         <h3>
                             Store any type of file
                         </h3>
                     </div>
                     <!-- /**
-                                                          * *Any_File/Snippet
-                                                          */ -->
+                                                                              * *Any_File/Snippet
+                                                                              */ -->
                     <div class="card_Any_File__snippet">
                         <p>
                             Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.
@@ -195,8 +195,8 @@
 
 
             <!-- /**
-                                        * !CTA
-                                        */ -->
+                                                    * !CTA
+                                                    */ -->
 
             <div class="cta">
                 <div class="cta__hero">
@@ -211,11 +211,11 @@
                     <div class="cta__snippet">
                         <p>
                             Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-                                                                                    storage needs.
+                                                                                                                storage needs.
                         </p>
                         <p>
                             Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-                                                                                    attachments required.
+                                                                                                                attachments required.
                         </p>
                     </div>
                     <div class="cta__link">
@@ -226,62 +226,63 @@
                 </div>
 
                 <!-- /**
-                                                * !Blockquote
-                                                */ -->
+                                                                * !Blockquote
+                                                                */ -->
 
             </main>
-<section>
-            <div class="testimonials">
-                <ul class="quotes">
-                    <li class="split1">
-                        <blockquote class="break">
-                            <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-                                                                                        become a well-oiled collaboration machine.
-                            </p>
-                            <div class="quotes__break">
-                                <img src="/images/profile-1.jpg" alt="pic_1">
-                                <div class="quotes__heading">
-                                    <p class="name">Satish Patel</p>
-                                    <p class="description">Founder & CEO, Huddle</p>
+            <main>
+                <div class="testimonials">
+                    <ul class="quotes">
+                        <li class="split1">
+                            <blockquote class="break">
+                                <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                                                                                                                            become a well-oiled collaboration machine.
+                                </p>
+                                <div class="quotes__break">
+                                    <img src="/images/profile-1.jpg" alt="pic_1">
+                                    <div class="quotes__heading">
+                                        <p class="name">Satish Patel</p>
+                                        <p class="description">Founder & CEO, Huddle</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </blockquote>
-                    </li>
+                            </blockquote>
+                        </li>
 
 
-                    <li class="split2">
-                        <blockquote class="break">
-                            <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-                                                                                        become a well-oiled collaboration machine.
-                            </p>
-                            <div class="quotes__break">
-                                <img src="/images/profile-2.jpg" alt="pic_1">
-                                <div class="quotes__heading">
-                                    <p class="name">Satish Patel</p>
-                                    <p class="description">Founder & CEO, Huddle</p>
+                        <li class="split2">
+                            <blockquote class="break">
+                                <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                                                                                                                            become a well-oiled collaboration machine.
+                                </p>
+                                <div class="quotes__break">
+                                    <img src="/images/profile-2.jpg" alt="pic_1">
+                                    <div class="quotes__heading">
+                                        <p class="name">Satish Patel</p>
+                                        <p class="description">Founder & CEO, Huddle</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </blockquote>
-                    </li>
+                            </blockquote>
+                        </li>
 
 
-                    <li class="split3">
-                        <blockquote class="break">
-                            <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-                                                                                        become a well-oiled collaboration machine.
-                            </p>
-                            <div class="quotes__break">
-                                <img src="/images/profile-3.jpg" alt="pic_1">
-                                <div class="quotes__heading">
-                                    <p class="name">Satish Patel</p>
-                                    <p class="description">Founder & CEO, Huddle</p>
+                        <li class="split3">
+                            <blockquote class="break">
+                                <p class="quotes__quote">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+                                                                                                                            become a well-oiled collaboration machine.
+                                </p>
+                                <div class="quotes__break">
+                                    <img src="/images/profile-3.jpg" alt="pic_1">
+                                    <div class="quotes__heading">
+                                        <p class="name">Satish Patel</p>
+                                        <p class="description">Founder & CEO, Huddle</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </blockquote>
-                    </li>
+                            </blockquote>
+                        </li>
 
-                </ul>
-            </div>
+                    </ul>
+                </div>
+            </main>
             <div class="container">
 
                 <form id="form" action="/">
@@ -294,7 +295,7 @@
                         <div class="cta__form_snippet">
                             <p>
                                 It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-                                                                                                questions, our support team would be happy to help you.
+                                                                                                                                questions, our support team would be happy to help you.
                             </p>
                         </div>
                         <div class="cta__spilt_form">
@@ -313,9 +314,9 @@
 
             </div>
             <!-- /**
-                                    * !footer
-                                    */ -->
-</section>
+                                                * !footer
+                                                */ -->
+
             <footer class="footer">
                 <div class="logo">
                     <img class="footer__logo" src="/images/logo.svg" alt="logo">
@@ -327,7 +328,7 @@
                             <img src="/images/icon-location.svg" alt="location-icon">
                         </span>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                                                                               dolore magna aliqua</p>
+                                                                                                           dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="footer__contact-grid">
