commit on master

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                                                                 */ -->
 
             </main>
-            <main>
-                <div class="testimonials">
+            
+                <div role="content" class="testimonials">
                     <ul class="quotes">
                         <li class="split1">
                             <blockquote class="break">
@@ -282,17 +282,17 @@
 
                     </ul>
                 </div>
-            </main>
+            
             <div class="container">
 
                 <form id="form" action="/">
                     <div class="form-control">
-                        <div class="cta__form_header">
+                        <div role="header" class="cta__form_header">
                             <h5>
                                 Get early access today
                             </h5>
                         </div>
-                        <div class="cta__form_snippet">
+                        <div role="paragraph" class="cta__form_snippet">
                             <p>
                                 It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
                                                                                                                                 questions, our support team would be happy to help you.
@@ -301,11 +301,11 @@
                         <div class="cta__spilt_form">
                             <div class="input-control">
                                 <label for="email"></label>
-                                <input type="email" id="email" name="email" placeholder="email@example.com">
+                                <input role="email" type="email" id="email" name="email" placeholder="email@example.com">
                                 <small class="error">Error, please check your email</small>
                             </div>
 
-                            <div class="btn_2">
+                            <div role="button" class="btn_2">
                                 <button class="btn btn-primary btn-lg gap-2 col-6" type="submit">Get Started For Free</button>
                             </div>
                         </div>
