commit on master

--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
         <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-        <style>
-            .attribution {
-                font-size: 11px;
-                text-align: center;
-            }
-            .attribution a {
-                color: hsl(228, 45%, 44%);
-            }
-        </style>
+        
     </head>
     <body>
         <!-- /**
@@ -52,7 +44,7 @@
         <!-- /**
                         * *Value_Proposition
                         */ -->
-        <main id="intro1" class="content">
+        <section id="intro1" class="content">
             <div class="content__contents">
                 <div class="hero">
                     <img src="/images/" aria-label="img" alt="picture">
@@ -229,7 +221,7 @@
                                                 * !Blockquote
                                                 */ -->
 
-            </main>
+            </section>
             
             <main id="intro2">
             <div class="testimonials">
