commit on master

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="intro1" class="content">
             <div class="content__contents">
                 <div class="hero">
-                    <img src="/images/" aria-label="img" alt="picture">
+                    <img class="photo1" src="/images/" alt="photo">
                 </div>
                 <div class="intro">
                     <div class="intro__heading">
@@ -192,7 +192,7 @@
 
             <div class="cta">
                 <div class="cta__hero">
-                    <img src="/images/" aria-label="img" alt="picture">
+                    <img class="photo2" src="/images/" alt="picture">
                 </div>
                 <div class="cta__contents">
                     <div class="cta__header">
