--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- /**
                         * *Value_Proposition
                         */ -->
-        <section id="intro1" class="content">
+        <main id="intro1" class="content">
             <div class="content__contents">
                 <div class="hero">
                     <img class="photo1" src="/images/" alt="photo">
@@ -221,9 +221,9 @@
                                                 * !Blockquote
                                                 */ -->
 
-            </section>
+                </main>
             
-            <main id="intro2">
+            <section id="intro2">
             <div class="testimonials">
                 <ul class="quotes">
                     <li class="split1">
@@ -305,7 +305,7 @@
                 </form>
 
             </div>
-        </main>
+        </section>
             <!-- /**
                                     * !footer
                                     */ -->
